<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Lights Out</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="about_text">The game was invented by Tiger Electronics in 1995. It is a simple logic game that shows that once you made the wrong move, it\'ll be harder to fix your mistakes, but that doesn\'t mean it can\'t be done.\n\n Application by: \n Akemi Ray A. Goshi \n B-8L </string>
    <string name="rules_text">Click a box to turn the lights off or on. The twist is that the boxes beside also turn off/on! The goal is to turn off all the lights. If the player exceeds 5 clicks, game over! </string>
    <string name="rules">Rules</string>
    <string name="about">About</string>

    <string name="lights_out">Lights Out!</string>
    <string name="enter_name">Enter your name</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="play_button">Play!</string>
    <string name="lightboxtext">1</string>
    <string name="retry">Retry</string>
    <string name="clicks">Clicks: 0</string>
    <string name="win">You win!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="lose_message">You were not able to do it in 5 clicks. ;(</string>
    <string name="win_message">"Congratulations! You finished in 4 clicks!"</string>
    <string name="next_match">Next Match</string>
    <string name="Myname">Akemi Goshi</string>
</resources>
