<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.InGame">

    <data>

        <variable
            name="game"
            type="com.example.android.navigation.GameFragment" />

        <variable
            name="infoget"
            type="com.example.android.navigation.Infoget" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nickname_text"
            style="@style/NameStyle"
            android:text="@={infoget.nickname}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent2"
            android:paddingBottom="@dimen/small_padding"
            android:textAlignment="center"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

        <!--GAME PROPER-->

        <TextView
            android:id="@+id/lightbox1"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox2"
            app:layout_constraintEnd_toStartOf="@+id/lightbox2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lightbox2"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/lightbox3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox1"
            app:layout_constraintTop_toBottomOf="@+id/nickname_text" />

        <TextView
            android:id="@+id/lightbox3"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox2"
            app:layout_constraintEnd_toStartOf="@+id/lightbox4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox2" />

        <TextView
            android:id="@+id/lightbox4"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox3" />

        <TextView
            android:id="@+id/lightbox5"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox6"
            app:layout_constraintEnd_toStartOf="@+id/lightbox6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lightbox6"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/lightbox7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox5"
            app:layout_constraintTop_toBottomOf="@+id/lightbox2" />

        <TextView
            android:id="@+id/lightbox7"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox6"
            app:layout_constraintEnd_toStartOf="@+id/lightbox8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox6" />

        <TextView
            android:id="@+id/lightbox8"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox7" />

        <TextView
            android:id="@+id/lightbox9"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox10"
            app:layout_constraintEnd_toStartOf="@+id/lightbox10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lightbox10"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/lightbox11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox9"
            app:layout_constraintTop_toBottomOf="@+id/lightbox6" />

        <TextView
            android:id="@+id/lightbox11"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox10"
            app:layout_constraintEnd_toStartOf="@+id/lightbox12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox10" />

        <TextView
            android:id="@+id/lightbox12"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox11" />

        <TextView
            android:id="@+id/lightbox13"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox14"
            app:layout_constraintEnd_toStartOf="@+id/lightbox14"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lightbox14"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/lightbox15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox13"
            app:layout_constraintTop_toBottomOf="@+id/lightbox10" />

        <TextView
            android:id="@+id/lightbox15"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox14"
            app:layout_constraintEnd_toStartOf="@+id/lightbox16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox14" />

        <TextView
            android:id="@+id/lightbox16"
            style="@style/lightbox1"
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:text="@string/lightboxtext"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/lightbox15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lightbox15" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/larger_space"
            android:text="@string/retry"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/click_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lightbox15" />

        <TextView
            android:id="@+id/click_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:text="@string/clicks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>